--- a/3.0_Neural_Network.ipynb
+++ b/3.0_Neural_Network.ipynb
@@ -592,15 +592,298 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 3.3.3ニューラルネットワークの行列の積"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.array([1,2])\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3 5]\n",
+      " [2 4 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "W = np.array([[1,3,5],[2,4,6]])\n",
+    "print(W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5 11 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Y = np.dot(X,W)\n",
+    "print(Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.dot（多次元配列のドット積）を使えば、Yの結果を一度に計算できる。すなわちYの要素数が１００や１０００であったとしても、一度の演算で計算できる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4３層ニューラルネットワークの実装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ここでは、入力から出力への処理（フォワード方向）への処理を行う"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 記号の確認"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    " w_{1２}^{(1) }x_{(1)}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "右上の（１）は、第１層の重み、第１層のニューロンを意味している\\\\[0.2cm]\n",
+    "重みの右下の２つの数字は、次層のニューロンと前層のニューロンのインデックス番号から構成される\\\\[0.2cm]\n",
+    "上記の式で説明すると、前層のニューロンx_{2}とから次層の１番目のニューロン a_{1}^{(1) }への重みである事を意味する\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4.2　各層における信号伝達の実装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "６０ページの図を式で表す"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "式（３.８）\n",
+    "$$\n",
+    "  a_{1}^{(1) } = w_{11}^{(1) }x_{(1)}+ w_{12}^{(1) }x_{(2)}+b_{(1)}^{(1)}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "また、行列の席を用いると、第１層目の「重み付き和」は次の式でまとめて表す事ができる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "式（３．９）\n",
+    " $$ A^{(1)}= XW^{(1)}+B^{(1)}$$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$但し、 A^{(1)}, XW^{(1)},B^{(1)}は、下記の通りとなる$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$A^{(1)}=( a_{1}^{(1) }\\ a_{2}^{(1) }\\ a_{3}^{(1) })\n",
+    "~~~  X=(x_{(1)}\\ x_{(2)})\n",
+    "~~~ B=( b_{1}^{(1)}\\  b_{2}^{(1)} \\ b_{3}^{(1)})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$W^{(1)}=\\left(\n",
+    " \\begin{array}{cccc}\n",
+    " w_{11}^{(1) }& w_{21}^{(1) }&w_{(31)}^{(1) }\\\\\n",
+    " w_{12}^{(1) }& w_{22}^{(1) }& w_{32}^{(1) }\\\\\n",
+    "\\end{array}\n",
+    "\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# 57ページからスタート"
+    "#式（３．９）を実装してみる　。ここでは入力、重み、バイアスは適当な値を入れている\n",
+    "x = np.array([1.0,0.5])\n",
+    "W1 = np.array([[0.1,0.3,0.5],[0.2,0.4,0.6]])\n",
+    "B1 = np.array([0.1,0.2,0.3])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(W1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(B1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A1=np.dot(X,W1) + B1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "６１ページの式まで"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
