--- a/3.0_Neural_Network.ipynb
+++ b/3.0_Neural_Network.ipynb
@@ -879,17 +879,243 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "６１ページの式まで"
+    "#続いて図３−１８を実装する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.6 1.3 2. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z1 = sigmoid(A1)\n",
+    "print(A1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.64565631 0.78583498 0.88079708]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Z1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#図３−１８　入力層から第２層への信号の伝達について実装をする"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "W2 = np.array([[0.1,0.4],[0.2,0.5],[0.3,0.6]])\n",
+    "B2 = np.array([0.1,0.2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Z1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(W2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(B2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#図3-19　第１双から第２層への信号伝達"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A2 = np.dot(Z1,W2) + B2\n",
+    "Z2 = sigmoid(A2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def identity_function(x):\n",
+    "    return x\n",
+    "\n",
+    "W3 =np.array([[0.1,0.3],[0.2,0.4]])\n",
+    "B3 = np.array([0.1,0.2])\n",
+    "\n",
+    "A3 = np.dot(Z2,W3) + B3\n",
+    "Y = identity_function(A3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " identity_function()という関数を定義して、この関数を「恒等関数」という。出力層の活性化関数と利用する。恒等関数は、入力をそのまま出力する関数"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4.3　実装まとめ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input x =  [1.  0.5]\n",
+      "入力層から第1層へ\n",
+      "a1 =  [0.3 0.7 1.1]\n",
+      "z1 =  [0.57444252 0.66818777 0.75026011]\n",
+      "第1層から第2層へ\n",
+      "a2 =  [0.51615984 1.21402696]\n",
+      "z2 =  [0.62624937 0.7710107 ]\n",
+      "第2層から出力層へ\n",
+      "a3 =  [0.31682708 0.69627909]\n",
+      "output y =  [0.31682708 0.69627909]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 重みとバイアスの初期化\n",
+    "def init_network():\n",
+    "    network = {}\n",
+    "    network['W1'] = np.array([[0.1, 0.3, 0.5],[0.2, 0.4, 0.6]])\n",
+    "    network['b1'] = np.array([0.1, 0.2, 0.3])\n",
+    "    network['W2'] = np.array([[0.1, 0.4],[0.2, 0.5], [0.3, 0.6]])\n",
+    "    network['b2'] = np.array([0.1, 0.2])\n",
+    "    network['W3'] = np.array([[0.1, 0.3],[0.2, 0.4]])\n",
+    "    network['b3'] = np.array([0.1, 0.2])\n",
+    "\n",
+    "    return network\n",
+    "\n",
+    "# 入力信号を出力へ変換\n",
+    "def forward(network, x):\n",
+    "    W1, W2, W3 = network['W1'], network['W2'], network['W3']\n",
+    "    b1, b2, b3 = network['b1'], network['b2'], network['b3']\n",
+    "\n",
+    "    print(\"入力層から第1層へ\")\n",
+    "    a1 = np.dot(x, W1) + b1\n",
+    "    print(\"a1 = \", a1)\n",
+    "    z1 = sigmoid(a1)\n",
+    "    print(\"z1 = \", z1)\n",
+    "    print(\"第1層から第2層へ\")\n",
+    "    a2 = np.dot(z1, W2) + b2\n",
+    "    print(\"a2 = \", a2)\n",
+    "    z2 = sigmoid(a2)\n",
+    "    print(\"z2 = \", z2)\n",
+    "    a3 = np.dot(z2, W3) + b3\n",
+    "    print(\"第2層から出力層へ\")\n",
+    "    print(\"a3 = \", a3)\n",
+    "    y = identity_function(a3)\n",
+    "\n",
+    "    return y\n",
+    "\n",
+    "network = init_network()\n",
+    "x = np.array([1.0, 0.5])\n",
+    "print(\"input x = \", x)\n",
+    "y = forward(network, x)\n",
+    "print(\"output y = \", y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "66ページから"
+   ]
   }
  ],
  "metadata": {
